# collections

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
collections/: CMakeLists.txt
collections/include/collections/: collections.h
collections/src/: collections.cpp
demo/: CMakeLists.txt  main.cpp
